Resolves: tdf#152704 old image remains underneath when new image drawn

in this dialog preview widget

Change-Id: Id33995d9a9557d235178be0d12cc6b44e146ff4c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149017
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins